# deducto

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/deducto/: __main__.py  expr.py  parser.py  proof.py  repl.py  test.py
src/deducto/cli/: commands.py  parser.py  session.py  utils.py
src/deducto/core/: expr.py  proof.py
src/deducto/export/: tex.py  txt.py
src/deducto/rules/: apply.py  equivalence.py  inference.py
tests/cli/: test_parser.py  test_utils.py
tests/core/: test_proof.py  test_utils.py
tests/rules/: test_equivalence.py  test_inference.py
