[tool.poetry]
name = "deducto"
version = "0.1.0"
description = ""
authors = ["salastro <salah2112004@gmail.com>"]
readme = "README.md"
packages = [{include = "deducto", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
prompt-toolkit = "^3.0.51"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.poetry.scripts]
deducto = "deducto.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
